disable pte cop

--- a/HybridBaseDeployment/.AL-Go/settings.json
+++ b/HybridBaseDeployment/.AL-Go/settings.json
@@ -1,5 +1,6 @@
 {
     "country": "us",
+    "enablePerTenantExtensionCop":  false,    
     "appFolders": [ "app" ],
     "testFolders": [ "test" ]
 }
